--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,6 +21,63 @@ a,
   }
 }
 
+
+main {
+  display: flex;
+  flex-direction: row;
+  max-width: 1020px;
+  width: 1020px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.items-block {
+  width: 50%;
+}
+.items-block .selected-items {
+  border: 2px solid hsla(160, 100%, 37%, 1);
+  display: flex;
+  flex-direction: row;
+  padding: 15px;
+  flex-wrap: wrap;
+  min-height: 200px;
+  height: 250px;
+
+}
+.items-block .selected-items .item {
+  display: flex;
+  margin-right: 10px;
+  padding: 15px;
+  border: 2px solid hsla(160, 100%, 37%, 1);
+}
+.all-items {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 15px;
+  border: 2px solid hsla(160, 100%, 37%, 1);
+}
+.item-tile {
+  display: flex;
+  margin-right: 10px;
+  padding: 15px;
+  border: 2px solid hsla(160, 100%, 37%, 1);
+  margin-bottom: 15px;
+  width: 85px;
+}
+.item {
+  width: 50%;
+  margin-left: auto;
+}
+
+button {
+  display: flex;
+  margin-right: 10px;
+  padding: 15px;
+  border: 2px solid hsla(160, 100%, 37%, 1);
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  width: 85px;
+}
 @media (min-width: 1024px) {
   body {
     display: flex;
@@ -32,4 +89,5 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+
 }
